add html for manipulasi element

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 <body>
     <h1 id="title">Harga Barang: 100, 200, 300, 400, 500</h1>
     <button id="btn" onclick="changeTitle()">Harga</button>
+
+    // Manipulasi Element
+    <h1 id="manipulateTitle">Manipulasi Element</h1>
+    <button id="manipulateBtn">Ubah Judul</button>
+    <div id="colorBox" style="width: 100px; height: 100px; background-color: red;"></div>
+    <button id="changeColorBtn">Ubah Warna</button>
+    <ul id="itemList">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+    <button id="addItemBtn">Tambah Item</button>
+    <button id="removeItemBtn">Hapus Item Terakhir</button>
+
     <script src="./assets/js/index.js"></script>
 </body>
 </html>
