--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <h1 id="title">Harga Barang: 100, 200, 300, 400, 500</h1>
     <button id="btn" onclick="changeTitle()">Harga</button>
 
-    // Manipulasi Element
     <h1 id="manipulateTitle">Manipulasi Element</h1>
     <button id="manipulateBtn">Ubah Judul</button>
     <div id="colorBox" style="width: 100px; height: 100px; background-color: red;"></div>
@@ -21,6 +20,20 @@
     </ul>
     <button id="addItemBtn">Tambah Item</button>
     <button id="removeItemBtn">Hapus Item Terakhir</button>
+
+    <!-- Form Handling -->
+    <form id="userForm">
+        <input type="text" id="username" placeholder="Username" required>
+        <input type="email" id="email" placeholder="Email" required>
+        <button type="submit">Submit</button>
+    </form>
+
+    <form id="loginForm">
+        <input type="text" id="usernameInput" placeholder="Username" required>
+        <input type="password" id="passwordInput" placeholder="Password" required>
+        <button type="submit" id="loginBtn">Login</button>
+        <button type="reset" id="resetBtn">Reset</button>
+    </form>
 
     <script src="./assets/js/index.js"></script>
 </body>
