add display areas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <button type="submit" id="loginBtn">Login</button>
         <button type="reset" id="resetBtn">Reset</button>
     </form>
+    
+    <div id="nameDisplay"></div>
+    <div id="emailDisplay"></div>
+    <div id="loginMessage"></div>
 
     <script src="./assets/js/index.js"></script>
 </body>
