Add Challenge Manipulasi Element

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <div id="emailDisplay"></div>
     <div id="loginMessage"></div>
 
+        <h1 id="header">Ini adalah Header</h1>
+        <button id="updateHeaderBtn">Update Header</button>
+
     <script src="./assets/js/index.js"></script>
 </body>
 </html>
