--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
     <div id="emailDisplay"></div>
     <div id="loginMessage"></div>
 
-        <h1 id="header">Ini adalah Header</h1>
-        <button id="updateHeaderBtn">Update Header</button>
+    <h1 id="header">Ini adalah Header</h1>
+    <button id="updateHeaderBtn">Update Header</button>
+
+    <img id="image" src="./blackpict.jpg" alt="Gambar Awal" width="200">
+    <button id="updateImageBtn">Update Gambar</button>
 
     <script src="./assets/js/index.js"></script>
 </body>
