add html for item list

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
     <img id="image" src="./blackpict.jpg" alt="Gambar Awal" width="200">
     <button id="updateImageBtn">Update Gambar</button>
 
+    <ul id="myList">
+        <li>Item Lama 1</li>
+        <li>Item Lama 2</li>
+        <li>Item Lama 3</li>
+    </ul>
+    <button id="addItemBtn">Tambah Item Baru</button>
+    <button id="removeItemBtn">Hapus Item Terakhir</button>
+
     <script src="./assets/js/index.js"></script>
 </body>
 </html>
