--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <li>Item 2</li>
         <li>Item 3</li>
     </ul>
-    <button id="addItemBtn">Tambah Item</button>
-    <button id="removeItemBtn">Hapus Item Terakhir</button>
+    <button id="addItemBtnTop">Tambah Item</button>
+    <button id="removeItemBtnTop">Hapus Item Terakhir</button>
 
     <!-- Form Handling -->
     <form id="userForm">
