--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     </ul>
     <button id="addItemBtn">Tambah Item Baru</button>
     <button id="removeItemBtn">Hapus Item Terakhir</button>
+    <button id="changeBgColorBtn">Ubah Warna Latar</button>
+    <button id="removeListItemBtn">Hapus Item Terakhir</button>
 
     <script src="./assets/js/index.js"></script>
 </body>
