--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
     <button id="changeBgColorBtn">Ubah Warna Latar</button>
     <button id="removeListItemBtn">Hapus Item Terakhir</button>
 
+    <!-- Form Handling -->
+    <form id="userForm">
+        <input type="text" id="username" placeholder="Username" required>
+        <input type="email" id="email" placeholder="Email" required>
+        <button type="submit">Submit</button>
+    </form>
+
     <script src="./assets/js/index.js"></script>
 </body>
 </html>
