--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
     <!-- Form Handling -->
     <form id="userForm">
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="email" id="email" placeholder="Email" required>
+        <input type="text" id="username2" placeholder="Username" required>
+        <input type="email" id="email2" placeholder="Email" required>
         <button type="submit">Submit</button>
     </form>
     <script src="./assets/js/index.js"></script>
